fixed low contrast mistake on light mode

--- a/tools/common.css
+++ b/tools/common.css
@@ -15,8 +15,8 @@
     --fg-color-hover: #ddd;
     --half-color: #999;
     --dim-text-color: #777;
-    --text-color: #333;
-    --text-color-hover: #111;
+    --text-color: #111;
+    --text-color-hover: #333;
     --font: "DM Sans", sans-serif;
     --font-mono: "Fira Code", "Cascadia Code", monospace;
     --font-icons: "Material Symbols Rounded";
